fixed chrome scaling issues on iPhone

--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,18 @@ header img{
 	#camera{
 		height: 20vh !important;
 	}
+
+	h1{
+		font-size: 10vh !important;
+	}
+
+	h2{
+		font-size: 6vh !important;
+	}
+
+	p{
+		font-size: 4vh !important;
+	}
 }
 
 @media screen and (orientation: portrait) and (max-width: 860px) {
@@ -199,6 +211,18 @@ header img{
 
 	#camera{
 		height: 15vh !important;
+	}
+
+	h1{
+		font-size: 40pt !important;
+	}
+
+	h2{
+		font-size: 30pt !important;
+	}
+
+	p{
+		font-size: 20pt !important;
 	}
 }
 
